# solidauth-oidc

./: .env.sample  .git-blame-ignore-revs  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.prod.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  uwsgi.ini
.github/workflows/: ruff.yaml
solid/: __init__.py  admin.py  auth.py  cli.py  db.py  extensions.py  webserver.py
solid/backend/: __init__.py  db_backend.py  redis_backend.py
solid/model/: __init__.py
solidauth/: authentication.py  client.py  dpop.py  solid.py
solidauth/backend/: __init__.py  db_backend.py  redis_backend.py
solidauth/model/: __init__.py
solidauth/tests/: test_authentication.py  test_backend.py  test_solid.py
soliddemo/: admin.py  auth.py  cli.py  db.py  extensions.py  webserver.py
templates/: base.html  error.html  index.html  login.html  redirect.html  redirect_hash.html  register.html  success.html
trompasolid/: authentication.py  client.py  db.py  dpop.py  solid.py
trompasolid/backend/: __init__.py  db_backend.py  redis_backend.py
trompasolid/model/: __init__.py
trompasolid/tests/: __init__.py  test_authentication.py  test_backend.py  test_solid.py
