[project]
name = "solid-oidc-app-permission"
version = "0.1.0"
description = "Solid OIDC client for python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appnope==0.1.3",
    "asttokens==2.2.1",
    "async-timeout==4.0.2",
    "backcall==0.2.0",
    "bcrypt==4.0.1",
    "beaker==1.12.1",
    "certifi==2022.12.7",
    "cffi==1.15.1",
    "chardet==5.1.0",
    "charset-normalizer==3.0.1",
    "click==8.1.3",
    "cryptography==39.0.0",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.13",
    "executing==1.2.0",
    "flask==2.2.2",
    "flask-admin==1.6.1",
    "flask-bcrypt==1.0.1",
    "flask-login==0.6.2",
    "flask-redis==0.4.0",
    "flask-shell-ipython==0.4.1",
    "flask-sqlalchemy==3.0.3",
    "flask-wtf==1.1.1",
    "future==0.18.3",
    "idna==3.4",
    "importlib-metadata==6.0.0",
    "ipython==8.9.0",
    "isodate==0.6.1",
    "itsdangerous==2.1.2",
    "jedi==0.18.2",
    "jinja2==3.1.2",
    "jwcrypto==1.4.2",
    "mako==1.2.4",
    "markupsafe==2.1.2",
    "matplotlib-inline==0.1.6",
    "oic==1.5.0",
    "parso==0.8.3",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "prompt-toolkit==3.0.36",
    "psycopg2-binary==2.9.5",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pycparser==2.21",
    "pycryptodomex==3.17",
    "pygments==2.14.0",
    "pyjwkest==1.4.2",
    "pyjwt==2.6.0",
    "pyparsing==3.0.9",
    "python-dotenv==0.21.1",
    "rdflib==6.2.0",
    "redis==4.4.2",
    "requests==2.28.2",
    "six==1.16.0",
    "sqlalchemy==2.0.1",
    "stack-data==0.6.2",
    "traitlets==5.9.0",
    "typing-extensions==4.4.0",
    "urllib3==1.26.14",
    "wcwidth==0.2.6",
    "werkzeug==2.2.2",
    "wrapt==1.14.1",
    "wtforms==3.0.1",
    "zipp==3.12.1",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["E741"]
