[project]
name = "solid-oidc-app-permission"
version = "0.1.0"
description = "Solid OIDC client for python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click~=8.1.0",
    "flask~=3.1.0",
    "flask-admin~=1.6.1",
    "flask-bcrypt~=1.0.1",
    "flask-login~=0.6.3",
    "flask-redis~=0.4.0",
    "flask-shell-ipython~=0.5.3",
    "flask-sqlalchemy~=3.1.1",
    "flask-wtf~=1.2.2",
    "ipython~=8.35.0",
    "jinja2~=3.1.2",
    "jwcrypto~=1.5.6",
    "oic>=1.7.0",
    "psycopg2-binary~=2.9.10",
    "pyjwt~=2.10.0",
    "python-dotenv~=1.1.0",
    "rdflib~=6.2.0",
    "redis~=5.2.1",
    "requests~=2.32.0",
    "sqlalchemy~=2.0.1",
    "wtforms~=3.2.1",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["E741"]
